cluster/apps/envoy-gateway/templates/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: envoy-gateway
  labels:
    app.kubernetes.io/name: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-proxy-config
  listeners:
    - name: http
      hostname: "*.internal.gustend.net"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: "*.internal.gustend.net"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: internal-wildcard-gustend-net-cert
      allowedRoutes:
        namespaces:
          from: All
